# gopdfsuit

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  1.24_optimization_3.md  1.24_optimized_2.md  1.25_optimization_5.md  1.26_optimization_3.md  CONTRIBUTING.md  Dockerfile  NoAcroForm.go  QUICK_AUTH_REFERENCE.md  README.md  app.yaml  deslop  deslop.yml  docker-compose.yml  fielddetect.go  go.mod  go.sum  inspect_test.go  load_test_results.txt  main.go  makefile  policy.json  results.txt  setup-auth.sh  spike_test_results.txt  temp_multiplepage.json
.github/: FUNDING.yml
auth-ms/: Dockerfile  Dockerfile.dockerignore  handlers.go  main.go  models.go  server.go  store.go  token.go
bindings/python/: README.md  build.bat  build.sh  pyproject.toml  setup.py
bindings/python/cgo/: exports.go
bindings/python/pypdfsuit/: __init__.py  _bindings.py  generator.py  html.py  merge.py  redact.py  split.py  types.py
bindings/python/pypdfsuit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/python/pypdfsuit/lib/: .gitkeep  libgopdfsuit.h
bindings/python/tests/: conftest.py  test_fill.py  test_financial_report.py  test_generator.py  test_html.py  test_integration.py  test_merge.py  test_redact_financial_report.py  test_serializer_schema.py  test_split.py  test_xfdf_compressed.py
bkp/: go.mod
certs/: chain.pem  ec_leaf.csr  generate_certs.sh  go.mod  intermediate.csr  intermediate.key  intermediate.pem  leaf.csr  leaf.key  leaf.pem  rootCA.key  rootCA.pem
dockerfolder/: Dockerfile  Dockerfile_cloudrun  go.mod
docs/: index.html  script.js  styles.css
frontend/: .env.example  .eslintrc.cjs  README.md  go.mod  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
guides/: AUTHENTICATION.md  AUTHENTICATION_SUMMARY.md  BENCHMARKS.md  BENCHMARK_COMPARISON_2026-06-15.md  BENCHMARK_ZERODHA.md  CACHING_AND_MEMORY_LIFECYCLE.md  CROSS_REQUEST_CACHING_FAQ.md  DEPLOYMENT_CHECKLIST.md  DIGITAL_SIGNATURE_RSA_ECDSA.md  (+11 more)
(+998 files in other folders)
